--- a/cake.html
+++ b/cake.html
@@ -12,7 +12,7 @@
         <div class="categories-padding" id="categories-padding-top"></div>
         <div class="categories-nav-bar">
             <a href="index.html" target="_blank" id="mnb" >HOME</a>
-            <a href="bread.html" id="mnb" >BREADS</a>
+            <a href="bread.html" id="mnb" target="_blank">BREADS</a>
             <a href="cake.html" class="active" target="_blank" id="mnb" >CAKES</a>
             <a href="toppings.html" target="_blank" id="mnb">TOPPINGS</a>
             <a href="about.html" target="_blank"  id="mnb">ABOUT</a>  
@@ -47,7 +47,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
+                                <img class="testingImage" src="./ImagesFinal/LemonBlissCake.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
                                 <p class="recipe-name">Lemon Bliss Cake</p>
                             </a>
                         </div>
@@ -65,7 +65,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/pdMTw.png" alt="No Knead Bread Image and Recipe Link">
+                                <img class="testingImage" src="./ImagesFinal/GFAlmondBundt.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Gluten-Free Almond Bundt Cake</p>
                             </a>
                         </div>
@@ -73,8 +73,8 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">Raspberry Tea Cake</p>
+                                <img class="testingImage" src="./ImagesFinal/BlueberryCake.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
+                                <p class="recipe-name">Blueberry Breakfast Cake</p>
                             </a>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/pdMTw.png" alt="No Knead Bread Image and Recipe Link">
+                                <img class="testingImage" src="./ImagesFinal/ChocolateBundt.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Chocolate Fudge Bundt Cake</p>
                             </a>
                         </div>
@@ -91,16 +91,16 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/SourdoughBreadSTh.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">Summer Spoon Cake</p>
+                                <img class="testingImage" src="./ImagesFinal/ClassicBirthdayCake.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
+                                <p class="recipe-name">Classic Birthday Cake</p>
                             </a>
                         </div>
                     </div>
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/pdMOn.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">Blueberry Breakfast Cake</p>
+                                <img class="testingImage" src="./ImagesFinal/RaspberryTeaCake.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
+                                <p class="recipe-name">Raspberry Tea Cake</p>
                             </a>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/mpJam.png" alt="No Knead Bread Image and Recipe Link">
+                                <img class="testingImage" src="./ImagesFinal/GFLavaCake.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Gluten-Free Lava Cakes</p>
                             </a>
                         </div>
@@ -125,8 +125,8 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">Classic Birthday Cake</p>
+                                <img class="testingImage" src="./ImagesFinal/SummerSpoonCake.jpg" alt="No Knead Bread Image and Recipe Link">
+                                <p class="recipe-name">Summer Spoon Cake</p>
                             </a>
                         </div>
                     </div>
