--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <div class="main-nav-bar">
-            <a href="index.html" class="active" id="mnb" >HOME</a>
-            <a href="bread.html" target="_blank" id="mnb" >BREADS</a>
-            <a href="cake.html" target="_blank" id="mnb" >CAKES</a>
+            <a href="index.html" class="active" id="mnb">HOME</a>
+            <a href="bread.html" target="_blank" id="mnb">BREADS</a>
+            <a href="cake.html" target="_blank" id="mnb">CAKES</a>
             <a href="toppings.html" target="_blank" id="mnb">TOPPINGS</a>
             <a href="about.html" target="_blank"  id="mnb">ABOUT</a>  
         </div>
@@ -23,30 +23,46 @@
     <main>
         <div class="photo-grid">
             <div class="column" id="column-left">
-                <img id="mp-img-mar" src="./ImagesFinal/mpNKBread.png" alt="bread">
-                <img src="./ImagesFinal/SourdoughBreadSTh.png" alt="bread" loading="lazy">
-                <img src="./ImagesFinal/pdMTw.png" alt="bread" loading="lazy">
-                <img src="./ImagesFinal/NKneadBreadSFi.png" alt="bread" loading="lazy">
 
+                <a href="brNoKnead.html" target="_blank">
+                    <img id="mp-img-mar" src="./ImagesFinal/mpNKBread.png" alt="bread">
+                </a>
+                <img src="./ImagesFinal/BarbecueChickenPizza.jpg" alt="bread">
+                <img src="./ImagesFinal/PDR.jpg" alt="bread" loading="lazy">
+                <img src="./ImagesFinal/CrispyCheesePizza.jpg" alt="bread" loading="lazy">
+                <!--<img src="./ImagesFinal/maplePearUpsideDownCake.jpg" alt="bread" loading="lazy">-->
             </div>
             <div class="column">
-                <img id="mp-img-mar" src="./ImagesFinal/CakeChocolateOn.png" alt="bread">
-                <img src="./ImagesFinal/CakeCarrotOn.png" alt="bread" loading="lazy">
-                <!--<img src="./ImagesFinal/cake-c-koepke-unsplash.png" alt="bread" loading="lazy">-->
-                <img src="./ImagesFinal/CakeChocAndCarr.png" alt="bread" loading="lazy">
+                <img id="mp-img-mar" src="./ImagesFinal/SandwichBread.jpg" alt="bread">
+                <a href="brSourdough.html" target="_blank">
+                    <img src="./ImagesFinal/SourdoughBreadSTh.png" alt="bread" loading="lazy">
+                </a>
+                <a href="brPdoughnuts.html" target="_blank">
+                    <img src="./ImagesFinal/Rolls.png" alt="bread" loading="lazy">
+                </a>
+                <img src="./ImagesFinal/PaneBianco.jpg" alt="bread" loading="lazy">   
+                <!--<img src="./ImagesFinal/CinnamonBabka.jpg" alt="bread" loading="lazy">-->  
             </div>
             <div class="column">
-                <img id="mp-img-mar" src="./ImagesFinal/mpJam.png" alt="bread">
-                <img src="./ImagesFinal/JamZoomTest4.png" alt="bread" loading="lazy">
-                <img src="./ImagesFinal/mpJam.png" alt="bread" loading="lazy">
-                <!--<img src="./ImagesFinal/JamZoomTest4.png" alt="bread" loading="lazy">-->
+                <a href="cChocCake.html" target="_blank">
+                    <img id="mp-img-mar" src="./ImagesFinal/CakeChocolateOn.png" alt="bread">
+                </a>
+                <img src="./ImagesFinal/GermanChocolateCake.png" alt="bread" loading="lazy">
+                <a href="cCarrotCake.html" target="_blank">
+                    <img src="./ImagesFinal/CakeCarrotTw.jpg" alt="bread" loading="lazy">
+                </a>  
+                <img src="./ImagesFinal/maplePearUpsideDownCake.jpg" alt="bread" loading="lazy">  
+                <!--<img src="./ImagesFinal/ClassicBirthdayCake.jpg" alt="bread" loading="lazy">  
+                <img src="./ImagesFinal/GFAlmondBundt.jpg" alt="bread" loading="lazy"> 
+                <img src="./ImagesFinal/ChocolateGanache.jpg" alt="bread" loading="lazy">-->  
             </div>
             <div class="column" id="column-right">
-                <img id="mp-img-mar" src="./ImagesFinal/NKneadBreadSFi.png" alt="bread">
-                <img src="./ImagesFinal/cake-c-koepke-unsplash.png" alt="bread">
-                <img src="./ImagesFinal/pdMOn.png" alt="bread" loading="lazy">
-                <!--<img src="./ImagesFinal/mpJam.png" alt="bread" loading="lazy">-->
-
+                <img id="mp-img-mar" src="./ImagesFinal/mpJam.png" alt="bread">
+                <img src="./ImagesFinal/PastryCream.jpg" alt="bread" loading="lazy">
+                <img src="./ImagesFinal/RaspberryChocolateCake.png" alt="bread" loading="lazy">
+                <img src="./ImagesFinal/GFAlmondBundt.jpg" alt="bread" loading="lazy">
+                <!--<img src="./ImagesFinal/pdMTw.png" alt="bread" loading="lazy">
+                <img src="./ImagesFinal/VanillaButtercream.jpg" alt="bread" loading="lazy">-->
             </div>
         </div>
     </main>
