--- a/toppings.html
+++ b/toppings.html
@@ -31,7 +31,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="tVanillaButtercream.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link">
+                                <img class="testingImage" src="./ImagesFinal/VanillaButtercream.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Vanilla Buttercream Frosting</p>
                             </a>
                         </div>
@@ -39,7 +39,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="tChocolateButtercream.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/SourdoughBreadSTh.png" alt="No Knead Bread Image and Recipe Link">
+                                <img class="testingImage" src="./ImagesFinal/ChocolateButtercream.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Chocolate Buttercream Frosting</p>
                             </a>
                         </div>
@@ -47,8 +47,8 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">German Cake Frosting</p>
+                                <img class="testingImage" src="./ImagesFinal/ChocolateGanache.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
+                                <p class="recipe-name">Chocolate Ganache</p>
                             </a>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/pdMTw.png" alt="No Knead Bread Image and Recipe Link">
+                                <img class="testingImage" src="./ImagesFinal/LemonCurd.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Lemon Curd</p>
                             </a>
                         </div>
@@ -73,7 +73,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
+                                <img class="testingImage" src="./ImagesFinal/PastryCream.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
                                 <p class="recipe-name">Pastry Cream</p>
                             </a>
                         </div>
@@ -91,7 +91,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/SourdoughBreadSTh.png" alt="No Knead Bread Image and Recipe Link">
+                                <img class="testingImage" src="./ImagesFinal/SprinklesTw.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Sprinkles</p>
                             </a>
                         </div>
@@ -99,7 +99,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/pdMOn.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
+                                <img class="testingImage" src="./ImagesFinal/ConfSug.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
                                 <p class="recipe-name">Confectioners' Sugar</p>
                             </a>
                         </div>
@@ -109,15 +109,15 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSFi.png" alt="No Knead Bread Image and Recipe Link">
-                                <p class="recipe-name">Chocolate Ganache</p>
+                                <img class="testingImage" src="./ImagesFinal/GCFrosting.jpg" alt="No Knead Bread Image and Recipe Link">
+                                <p class="recipe-name">German Chocolate Cake Topping</p>
                             </a>
                         </div>
                     </div>
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/mpJam.png" alt="No Knead Bread Image and Recipe Link">
+                                <img class="testingImage" src="./ImagesFinal/iceCream.jpg" alt="No Knead Bread Image and Recipe Link">
                                 <p class="recipe-name">Ice Cream</p>
                             </a>
                         </div>
@@ -125,7 +125,7 @@
                     <div class="breads-space">
                         <div class="breads-border">
                             <a href="BnoKneadOneRec.html" target="_blank">
-                                <img class="testingImage" src="./ImagesFinal/NKneadBreadSTh.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
+                                <img class="testingImage" src="./ImagesFinal/Yogurt.jpg" alt="No Knead Bread Image and Recipe Link" loading="lazy">
                                 <p class="recipe-name">Yogurt</p>
                             </a>
                         </div>
