--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
     <header>
         <div class="categories-padding" id="categories-padding-top"></div>
         <div class="categories-nav-bar">
-            <a href="index.html" target="_blank" id="mnb" >HOME</a>
-            <a href="bread.html" class="active" id="mnb" >BREADS</a>
-            <a href="cake.html" target="_blank" id="mnb" >CAKES</a>
+            <a href="index.html" target="_blank" id="mnb">HOME</a>
+            <a href="bread.html" target="_blank" class="active" id="mnb">BREADS</a>
+            <a href="cake.html" target="_blank" id="mnb">CAKES</a>
             <a href="toppings.html" target="_blank" id="mnb">TOPPINGS</a>
             <a href="about.html" target="_blank"  id="mnb">ABOUT</a>  
         </div>
@@ -25,7 +25,16 @@
         <div class="categories-padding"></div>
     </header>
     <main>
-        <p>Text Placeholder</p>
+        <div class="about-main-div">
+            <p>This website is a student portfolio project. This website was created by the student to learn and showcase different HTML and CSS techniques. Photograph, image, and recipe credits are in the website links listed below.<br><br></p>
+            <div class="credits-nav-bar">
+                <a href="CreditsHomePage.html" target="_blank">HOME PAGE CREDITS</a>
+                <a href="#BREADSCREDITS" target="_blank">BREADS PAGE CREDITS</a>
+                <a href="#CAKESCREDITS" target="_blank">CAKES PAGE CREDITS</a>
+                <a href="#TOPPINGSCREDITS" target="_blank">TOPPINGS PAGE CREDITS</a> 
+            </div>
+            <br><br><br>
+        </div>
     </main>
     <footer>
         <div class="rec-connect">
