added Credits Home Page

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <div class="about-main-div">
-            <p>This website is a student portfolio project. This website was created by the student to learn and showcase different HTML and CSS techniques. Photograph, image, and recipe credits are in the website links listed below.<br><br></p>
+            <p>This website is a student portfolio project. This website was created by the student to learn and showcase different HTML and CSS techniques. Photograph, image, and recipe credits are in the website links and webpages listed below.<br><br></p>
             <div class="credits-nav-bar">
                 <a href="CreditsHomePage.html" target="_blank">HOME PAGE CREDITS</a>
                 <a href="#BREADSCREDITS" target="_blank">BREADS PAGE CREDITS</a>
