added Breads Credit Page

--- a/CreditsHomePage.html
+++ b/CreditsHomePage.html
@@ -29,8 +29,8 @@
             <p>This website is a student portfolio project. This website was created by the student to learn and showcase different HTML and CSS techniques. Photograph, image, and recipe credits are in the website links listed below.</p><br>
 
             <div class="credits-nav-bar">
-                <a href="#HPCREDITS" target="_blank">HOME PAGE CREDITS</a>
-                <a href="#BREADSCREDITS" target="_blank">BREADS PAGE CREDITS</a>
+                <a href="CreditsHomePage.html" target="_blank">HOME PAGE CREDITS</a>
+                <a href="CreditsBreadPage.html" target="_blank">BREADS PAGE CREDITS</a>
                 <a href="#CAKESCREDITS" target="_blank">CAKES PAGE CREDITS</a>
                 <a href="#TOPPINGSCREDITS" target="_blank">TOPPINGS PAGE CREDITS</a> 
             </div>
