--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <p>This website is a student portfolio project. This website was created by the student to learn and showcase different HTML and CSS techniques. Photograph, image, and recipe credits are in the website links and webpages listed below.<br><br></p>
             <div class="credits-nav-bar">
                 <a href="CreditsHomePage.html" target="_blank">HOME PAGE CREDITS</a>
-                <a href="#BREADSCREDITS" target="_blank">BREADS PAGE CREDITS</a>
+                <a href="CreditsBreadPage.html" target="_blank">BREADS PAGE CREDITS</a>
                 <a href="#CAKESCREDITS" target="_blank">CAKES PAGE CREDITS</a>
                 <a href="#TOPPINGSCREDITS" target="_blank">TOPPINGS PAGE CREDITS</a> 
             </div>
