--- a/bread.html
+++ b/bread.html
@@ -146,7 +146,7 @@
                         <div class="breads-border">
                             <a href="#noLink" target="_blank">
                                 <img class="testingImage" src="./ImagesFinal/pdMOn.png" alt="No Knead Bread Image and Recipe Link" loading="lazy">
-                                <p class="recipe-name">Yeast Doughnuts</p>
+                                <p class="recipe-name">Yeast-Raised Doughnuts</p>
                             </a>
                         </div>
                     </div>
