added home page and bread page credits

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <div class="credits-nav-bar">
                 <a href="CreditsHomePage.html" target="_blank">HOME PAGE CREDITS</a>
                 <a href="CreditsBreadPage.html" target="_blank">BREADS PAGE CREDITS</a>
-                <a href="#CAKESCREDITS" target="_blank">CAKES PAGE CREDITS</a>
+                <a href="CreditsCakePage.html" target="_blank">CAKES PAGE CREDITS</a>
                 <a href="#TOPPINGSCREDITS" target="_blank">TOPPINGS PAGE CREDITS</a> 
             </div>
             <br><br><br>
