added Cake Page Credits

--- a/CreditsBreadPage.html
+++ b/CreditsBreadPage.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <div class="about-main-div">
-            <p>This website is a student portfolio project. This website was created by the student to learn and showcase different HTML and CSS techniques. Photograph, image, and recipe credits are in the website links listed below.<br><br>This website should be viewed at 1200 pixels or more for the responsive formatting to work.<br><br>This website should be viewed at 1200 pixels or more for the responsive formatting to work.<br><br>For King Arthur Baking Company recipes and blogs, if no one was credited for the photographs, no one is listed as taking the photographs.</p><br>
+            <p>This website is a student portfolio project. This website was created by the student to learn and showcase different HTML and CSS techniques. Photograph, image, and recipe credits are in the website links listed below.<br><br>This website should be viewed at 1200 pixels or more for the responsive formatting to work.<br><br>For King Arthur Baking Company recipes and blogs, if no one was credited for the photographs, no one is listed as taking the photographs.</p><br>
 
             <div class="credits-nav-bar">
                 <a href="CreditsHomePage.html" target="_blank">HOME PAGE CREDITS</a>
